--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Minesweeper</title>
 
     <script src="src/index.js"></script>
+    <script src="src/domain/models/BombLocation.js"></script>
     <link rel="stylesheet" href="styles/minesweeper.css">
 </head>
 <body>
